[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://OptionsPanel.gd" type="Script" id=2]
[ext_resource path="res://DisplayPanel.gd" type="Script" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option_panel" type="PanelContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 38.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/option_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 977.0
margin_bottom = 31.0
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/option_panel/HBoxContainer"]
margin_left = 429.0
margin_right = 541.0
margin_bottom = 24.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/option_panel/HBoxContainer/HBoxContainer"]
margin_right = 4.0
margin_bottom = 24.0

[node name="TypeLabel" type="Label" parent="VBoxContainer/option_panel/HBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Type:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeEdit" type="LineEdit" parent="VBoxContainer/option_panel/HBoxContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 104.0
margin_bottom = 24.0
expand_to_text_length = true

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/option_panel/HBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 112.0
margin_bottom = 24.0

[node name="display_panel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/display_panel"]
margin_left = 7.0
margin_top = 252.0
margin_right = 977.0
margin_bottom = 266.0

[connection signal="settings_changed" from="VBoxContainer/option_panel" to="VBoxContainer/display_panel" method="update_display"]
[connection signal="text_entered" from="VBoxContainer/option_panel/HBoxContainer/HBoxContainer/TypeEdit" to="VBoxContainer/option_panel" method="set_type"]
